duniverse/menhirLib.20200211/test/static/bad/nonlinear-pattern.exp
File "nonlinear-pattern.mly", line 8, characters 9-10:
File "nonlinear-pattern.mly", line 8, characters 2-3:
Error: The variable x is bound several times.
